# VECNA

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.devcontainer/: devcontainer.json
.github/workflows/: pages.yml
frontend/: config.json  index.html
frontend/js/: app.js  classes.js  core.js  dice.js  monsters.js  spells.js
frontend/styles/: base.css  content.css  dice.css  layout.css
src/vecna/: __init__.py  api.py  prompts.py  resources.py  server.py  tools.py
