[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecna"
version = "0.1.0"
description = "MCP server for D&D Beyond character integration"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.0.0",
    "httpx>=0.28.0",
    "mcp>=1.6.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0"
]

[project.scripts]
vecna = "vecna:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
